# FIL-C

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_old.txt  PRD.md  PRD_FINAL.md  README.md  package.xml
config/: interpolation_config.yaml  multi_general_configuration.yaml
docs/: TROUBLESHOOTING.md
docs/archive/: HYBRID_APPROACH.md  IMPLEMENTATION_GUIDE.md  PRD_POINTCLOUD_INTERPOLATION.md  README_CORE_FEATURES.md  README_DEVELOPMENT_STATUS.md
docs/legacy/: config_loader.cpp  config_loader.hpp  interpolation_utils.cpp  interpolation_utils.hpp  main_fusion_node.cpp  projection_utils.hpp  test_functionality.py  test_interpolation_node.cpp  visualization_node.cpp
include/filc/: spherical_interpolator.hpp
launch/: interpolation.launch.py  interpolation_comparison.launch.py  test_interpolation.launch.py
log/: latest_build
scripts/: benchmark_interpolation.py  build_and_test.sh  visualize_interpolation.py
src/: image_interpolation_node.cpp  improved_interpolation_node.cpp  projection_utils.cpp  spherical_interpolation_node.cpp
